# Ws2812b-cgi-rust

./: .appveyor.yml  Cargo.toml  Dockerfile  README.md  build.rs  docker-compose.yml
.github/workflows/: docker.yml  main.yml
docker/: mime.types  nginx.conf  supervisord.conf
src/: bridge.rs  error.rs  main.rs
src/serial/: mod.rs  unix.c
